tests/toylang/neg/001523_mutation.toylang
program a = { var if a : bool; } .
